update the buy flow, added printable invoice, change steps on the buy process

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "test:e2e": "playwright test --config=playwright.config.js"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
+    "buffer": "^6.0.3",
     "framer-motion": "^12.23.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
