copilot instruccion, git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,13 @@ build/
 # Environment variables
 .env
 .env.local
+.env.development
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
+frontend/.env*
+backend/.env*
 
 # Logs
 logs
