refactorizasion de los archivos

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test:e2e": "playwright test --config=playwright.config.js"
+    "test:e2e": "playwright test --config=tests/playwright.config.js"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
