feat: add CI/CD with GitHub Actions

--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
+  "name": "mi-tienda-online",
+  "version": "1.0.0",
+  "description": "E-commerce con React + Express + Supabase",
+  "scripts": {
+    "install:all": "npm ci && cd backend && npm ci && cd ../frontend && npm ci",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build": "cd frontend && npm run build",
+    "start": "cd backend && npm start",
+    "lint": "cd frontend && npm run lint",
+    "test": "cd frontend && npm run test:e2e"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "nodemailer": "^7.0.11",
     "yet-another-react-lightbox": "^3.25.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
