--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,11 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: |
-            package-lock.json
             frontend/package-lock.json
             backend/package-lock.json
 
       - name: Instalar dependencias root
-        run: npm ci --ignore-scripts
+        run: npm install --ignore-scripts
 
       - name: Instalar dependencias frontend
         working-directory: frontend
