--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test:e2e": "playwright test --config=tests/playwright.config.js"
+    "test:e2e": "playwright test --config=tests/playwright.config.js",
+    "test:e2e:p0": "playwright test --config=tests/playwright.config.js tests/specs/p0-critical/",
+    "test:e2e:smoke": "playwright test --config=tests/playwright.config.js tests/specs/p0-critical/smoke.spec.js",
+    "test:e2e:ui": "playwright test --config=tests/playwright.config.js --ui",
+    "test:e2e:report": "playwright show-report tests/playwright-report"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
