--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview",
     "test:e2e": "playwright test --config=tests/playwright.config.js",
     "test:e2e:p0": "playwright test --config=tests/playwright.config.js tests/specs/p0-critical/",
+    "test:e2e:p1": "playwright test --config=tests/playwright.config.js tests/specs/p1-high/",
+    "test:e2e:p2": "playwright test --config=tests/playwright.config.js tests/specs/p2-medium/",
+    "test:e2e:components": "playwright test --config=tests/playwright.config.js tests/specs/components/",
+    "test:e2e:homepage": "playwright test --config=tests/playwright.config.js tests/specs/components/homepage.component.spec.js",
     "test:e2e:smoke": "playwright test --config=tests/playwright.config.js tests/specs/p0-critical/smoke.spec.js",
     "test:e2e:ui": "playwright test --config=tests/playwright.config.js --ui",
     "test:e2e:report": "playwright show-report tests/playwright-report"
