updated the env.example,  added Health check endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ build/
 .env.test.local
 .env.production.local
 frontend/.env*
+!frontend/.env.example
 backend/.env*
+!backend/.env.example
 
 # Logs
 logs
