fix(ci): pass VITE_API_URL and VITE_BASE_URL secrets to frontend build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,8 @@ jobs:
             npm ci
             
             echo "🏗️ Building frontend..."
+            export VITE_API_URL="${{ secrets.VITE_API_URL }}"
+            export VITE_BASE_URL="${{ secrets.VITE_BASE_URL }}"
             npm run build
             cd ..
             
