fix(P8): unificar deploy.yml y rollback.yml con secrets consistentes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ on:
 
 env:
   SERVER_IP: 143.47.118.165
-  SERVER_USER: ubuntu
-  APP_PATH: /home/ubuntu/TechStore
+  SERVER_USER: ${{ secrets.SERVER_USER }}
+  APP_PATH: ${{ secrets.APP_PATH }}
 
 jobs:
   deploy:
