--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -52,10 +52,7 @@ jobs:
             echo "📦 Reinstalando dependencias..."
             npm ci --ignore-scripts
             cd backend && npm ci --production && cd ..
-            cd frontend && npm ci
-            export VITE_API_URL="${{ secrets.VITE_API_URL }}"
-            export VITE_BASE_URL="${{ secrets.VITE_BASE_URL }}"
-            npm run build && cd ..
+            cd frontend && npm ci && npm run build && cd ..
             
             echo "🔄 Reiniciando servicios..."
             pm2 reload all --update-env
