feat: unit types, promo settings, cart input, currency normalization, tests
- Add product unit_type (unidad, lb, kg, etc.) across full stack: schema, DB queries, API routes, cart, invoices, PDF, order tracker, product detail

- Wire promo section to admin settings: toggle, title, text, button, image (useSiteSettings -> App -> AppRoutes -> Home)

- Add SettingsManager fields: promoTitle, promoButtonText, promoImage upload

- Cart: direct quantity input with validation, setCartQuantity hook, stock limit enforcement

- Currency: normalize legacy symbols (RD$, $, €) to ISO codes (DOP, USD, EUR), DOP displays as RD$

- Add productUnits.js utility, formatCurrency DOP support, settingsHelpers normalizeCurrencyCode

- Backend: safer cart route input parsing (Number.parseInt + Number.isFinite), unit_type in order items and email templates

- Add vitest.config.js, unit test scripts in package.json (test:unit, test:unit:p0-p3)

- Update nodemailer 7.0.11 -> 7.0.13

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test:unit": "vitest run --config vitest.config.js",
+    "test:unit:p0": "vitest run --config vitest.config.js tests/unit/p0",
+    "test:unit:p1": "vitest run --config vitest.config.js tests/unit/p1",
+    "test:unit:p2": "vitest run --config vitest.config.js tests/unit/p2",
+    "test:unit:p3": "vitest run --config vitest.config.js tests/unit/p3",
+    "test:unit:smoke:full": "vitest run --config vitest.config.js tests/unit/p3/p3.smoke-full.unit.test.js",
     "test:e2e": "playwright test --config=tests/playwright.config.js",
     "test:e2e:p0": "playwright test --config=tests/playwright.config.js tests/specs/p0-critical/",
     "test:e2e:p1": "playwright test --config=tests/playwright.config.js tests/specs/p1-high/",
