--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,11 @@ backend/data/*.json
 *~
 *.bak
 *.orig
+
+# Terraform — state y credenciales (NUNCA subir)
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/*.tfvars
+!terraform/terraform.tfvars.example
