--- a/backend/.env.example
+++ b/backend/.env.example
@@ -39,7 +39,7 @@ PORT=5001                              # (default: 5001)
 NODE_ENV=production                    # development | production
 FRONTEND_URL=                          # https://yourdomain.com  (share pages, email links)
 BASE_URL=                              # https://yourdomain.com  (OG meta image URLs)
-CORS_ORIGIN=                           # https://yourdomain.com  (allowed CORS origin)
+CORS_ORIGIN=                           # https://yourdomain.com,https://*.yourdomain.com (comma-separated allowed origins)
 
 
 # ╔══════════════════════════════════════════════════════════╗
