--- a/nginx/tienda.conf.template
+++ b/nginx/tienda.conf.template
@@ -43,7 +43,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name {{DOMAIN}} www.{{DOMAIN}};
+    server_name {{DOMAIN}} www.{{DOMAIN}} *.{{DOMAIN}};
     server_tokens off;
 
     # --- Security Headers ---
@@ -143,7 +143,7 @@ server {
 # server {
 #     listen 443 ssl http2;
 #     listen [::]:443 ssl http2;
-#     server_name {{DOMAIN}} www.{{DOMAIN}};
+#     server_name {{DOMAIN}} www.{{DOMAIN}} *.{{DOMAIN}};
 #     server_tokens off;
 #
 #     # --- Cloudflare Origin Certificate ---
@@ -227,7 +227,7 @@ server {
 # server {
 #     listen 443 ssl http2;
 #     listen [::]:443 ssl http2;
-#     server_name {{DOMAIN}} www.{{DOMAIN}};
+#     server_name {{DOMAIN}} www.{{DOMAIN}} *.{{DOMAIN}};
 #     server_tokens off;
 #
 #     # --- SSL Certificates (Certbot) ---
