--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -34,14 +34,17 @@ all:
         prod-1:
           ansible_host: 143.47.118.165
           ansible_user: ubuntu
+          ansible_ssh_private_key_file: ~/.ssh/oracle_key
           domain: eonsclover.com
           ssl_mode: full_strict
           app_branch: main
-          # Descomenta para agregar más servidores de producción:
-          # prod-2:
-          #   ansible_host: 10.0.0.51
-          #   ansible_user: ubuntu
-          #   domain: eonsclover.com
+        prod-2:
+          ansible_host: 35.192.57.192
+          ansible_user: ubuntu
+          ansible_ssh_private_key_file: ~/.ssh/gcp_prod2
+          domain: leds.eonsclover.com
+          ssl_mode: flexible
+          app_branch: main
 
     # ── STAGING (descomenta cuando tengas un server de staging) ─
     # staging:
