--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -29,6 +29,42 @@
   # ═══════════════════════════════════════════════════════════════════════════
   tasks:
 
+    # ── Swap (servidores con poca RAM) ──────────────────────
+    - name: Check if swap file exists
+      tags: [setup, swap]
+      ansible.builtin.stat:
+        path: "{{ swap_path }}"
+      register: swap_file
+
+    - name: Create swap file ({{ swap_size }})
+      tags: [setup, swap]
+      ansible.builtin.command: fallocate -l {{ swap_size }} {{ swap_path }}
+      when: not swap_file.stat.exists
+
+    - name: Set swap file permissions
+      tags: [setup, swap]
+      ansible.builtin.file:
+        path: "{{ swap_path }}"
+        mode: "0600"
+      when: not swap_file.stat.exists
+
+    - name: Format swap file
+      tags: [setup, swap]
+      ansible.builtin.command: mkswap {{ swap_path }}
+      when: not swap_file.stat.exists
+
+    - name: Enable swap file
+      tags: [setup, swap]
+      ansible.builtin.command: swapon {{ swap_path }}
+      when: not swap_file.stat.exists
+
+    - name: Add swap to fstab (persist on reboot)
+      tags: [setup, swap]
+      ansible.builtin.lineinfile:
+        path: /etc/fstab
+        line: "{{ swap_path }} none swap sw 0 0"
+        state: present
+
     # ── System packages ────────────────────────────────────
     - name: Update apt cache
       tags: [setup]
@@ -122,15 +158,43 @@
         state: started
         enabled: true
 
-    # ── SSL directory (for Cloudflare Origin Cert) ─────────
+    # ── SSL (Cloudflare Origin Certificate — wildcard) ─────
     - name: Create SSL directory
-      tags: [setup, nginx]
+      tags: [setup, nginx, ssl]
       ansible.builtin.file:
-        path: /etc/ssl/cloudflare
+        path: "{{ ssl_cert_dir }}"
         state: directory
         owner: root
         group: root
         mode: "0700"
+      when: ssl_mode == 'full_strict'
+
+    - name: Deploy Origin Certificate (wildcard *.eonsclover.com)
+      tags: [setup, nginx, ssl]
+      ansible.builtin.copy:
+        src: "{{ cf_origin_cert_file }}"
+        dest: "{{ ssl_cert_path }}"
+        owner: root
+        group: root
+        mode: "0600"
+      when: ssl_mode == 'full_strict' and cf_origin_cert_file is defined
+      notify: Reload Nginx
+
+    - name: Deploy Origin Certificate Key
+      tags: [setup, nginx, ssl]
+      ansible.builtin.copy:
+        src: "{{ cf_origin_key_file }}"
+        dest: "{{ ssl_key_path }}"
+        owner: root
+        group: root
+        mode: "0600"
+      when: ssl_mode == 'full_strict' and cf_origin_key_file is defined
+      notify: Reload Nginx
+
+    - name: Validate SSL certificate
+      tags: [setup, nginx, ssl]
+      ansible.builtin.command: openssl x509 -in {{ ssl_cert_path }} -noout -subject
+      changed_when: false
       when: ssl_mode == 'full_strict'
 
     # ═════════════════════════════════════════════════════════════════════════
