--- a/nginx/tienda.conf.template
+++ b/nginx/tienda.conf.template
@@ -9,12 +9,14 @@
 #   {{BACKEND_PORT}}    — puerto del backend Express (default: 5001)
 #   {{FRONTEND_PORT}}   — puerto del frontend Vite preview (default: 5173)
 #   {{APP_PATH}}        — ruta absoluta de la app (ej: /home/ubuntu/TechStore)
+#   {{SUPABASE_REF}}    — project ref de Supabase (ej: azbrnpxgpgmtnmofhmaf)
 #
 # Uso rápido con sed:
 #   sed -e 's/{{DOMAIN}}/mitienda.com/g' \
 #       -e 's/{{BACKEND_PORT}}/5001/g' \
 #       -e 's/{{FRONTEND_PORT}}/5173/g' \
 #       -e 's|{{APP_PATH}}|/home/ubuntu/TechStore|g' \
+#       -e 's/{{SUPABASE_REF}}/azbrnpxgpgmtnmofhmaf/g' \
 #       nginx/tienda.conf.template > /etc/nginx/sites-available/tienda
 #
 # Variantes SSL:
@@ -60,6 +62,24 @@ server {
     gzip_types text/plain text/css text/xml text/javascript
                application/javascript application/json application/xml
                image/svg+xml;
+
+    # --- Supabase Storage Proxy (reduce egress → Cloudflare caches) ---
+    # Convierte /storage/products/file.webp → Supabase Storage URL
+    # Cloudflare CDN cachea las imágenes, Supabase solo las sirve 1 vez.
+    location /storage/ {
+        proxy_pass https://{{SUPABASE_REF}}.supabase.co/storage/v1/object/public/;
+        proxy_set_header Host {{SUPABASE_REF}}.supabase.co;
+        proxy_ssl_server_name on;
+
+        # Cache headers para Cloudflare (30 días)
+        proxy_hide_header Cache-Control;
+        add_header Cache-Control "public, max-age=2592000, immutable";
+        add_header X-Cache-Proxy "storage-proxy";
+
+        # No pasar cookies ni headers de auth a Supabase Storage
+        proxy_set_header Cookie "";
+        proxy_set_header Authorization "";
+    }
 
     # --- API Backend (Express :{{BACKEND_PORT}}) ---
     location /api/ {
@@ -174,6 +194,17 @@ server {
 #                application/javascript application/json application/xml
 #                image/svg+xml;
 #
+#     # --- Supabase Storage Proxy ---
+#     location /storage/ {
+#         proxy_pass https://{{SUPABASE_REF}}.supabase.co/storage/v1/object/public/;
+#         proxy_set_header Host {{SUPABASE_REF}}.supabase.co;
+#         proxy_ssl_server_name on;
+#         proxy_hide_header Cache-Control;
+#         add_header Cache-Control "public, max-age=2592000, immutable";
+#         proxy_set_header Cookie "";
+#         proxy_set_header Authorization "";
+#     }
+#
 #     # --- API Backend ---
 #     location /api/ {
 #         proxy_pass http://127.0.0.1:{{BACKEND_PORT}};
@@ -257,6 +288,17 @@ server {
 #     gzip_types text/plain text/css text/xml text/javascript
 #                application/javascript application/json application/xml
 #                image/svg+xml;
+#
+#     # --- Supabase Storage Proxy ---
+#     location /storage/ {
+#         proxy_pass https://{{SUPABASE_REF}}.supabase.co/storage/v1/object/public/;
+#         proxy_set_header Host {{SUPABASE_REF}}.supabase.co;
+#         proxy_ssl_server_name on;
+#         proxy_hide_header Cache-Control;
+#         add_header Cache-Control "public, max-age=2592000, immutable";
+#         proxy_set_header Cookie "";
+#         proxy_set_header Authorization "";
+#     }
 #
 #     # --- API Backend ---
 #     location /api/ {
